Fixed the h4 tag styling, because it was not visible anymore

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,9 +40,9 @@ h3 {
 }
 
 h4 {
-    font-size: 2em;
+    font-size: 1.6em;
     font-weight: 400;
-    color: #fff
+    color: #262626;
 }
 
 
